--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^7.1.7"
+  },
+  "dependencies": {
+    "puppeteer": "^2.0.0"
   }
 }
