--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "electron": "^7.1.7"
   },
   "dependencies": {
-    "puppeteer": "^2.0.0"
+    "puppeteer": "^2.0.0",
+    "request":"2.88.0",
+    "axios": "0.19.1"
   }
 }
