--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "electron": "^7.1.7"
   },
   "dependencies": {
+    "axios": "0.19.1",
+    "electron-builder": "^22.8.1",
     "puppeteer": "^2.0.0",
-    "request": "2.88.0",
-    "axios": "0.19.1"
+    "request": "2.88.0"
   }
 }
